--- a/C#app/CesiEats/UserManagement/Connection/Connection.xaml
+++ b/C#app/CesiEats/UserManagement/Connection/Connection.xaml
@@ -3,12 +3,12 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CesiEats.UserManagement.Connection" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local="clr-namespace:CesiEats.UserManagement.Connection" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1050"
       Title="Connection">
     <Page.Resources>
-        <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Orange" SecondaryColor="Cyan" />
+        <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Green" SecondaryColor="Cyan" />
     </Page.Resources>
     <Page.DataContext>
         <local:ConnectionViewModel />
@@ -22,7 +22,13 @@
 
 
         <TextBlock HorizontalAlignment="Center" Margin="0,225,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="34" FontFamily="Microsoft YaHei" FontSize="16"><Run Language="fr-fr" Text="Mot de passe"/></TextBlock>
-        <PasswordBox x:Name="password"  materialDesign:HintAssist.Hint="Mot de passe" HorizontalAlignment="Center" Margin="0,275,0,0" VerticalAlignment="Top" Width="120" Cursor="Arrow"/>
+        <PasswordBox x:Name="password"  materialDesign:HintAssist.Hint="Mot de passe" HorizontalAlignment="Center" Margin="0,275,0,0" VerticalAlignment="Top" Width="120" Cursor="Arrow">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="PasswordChanged">
+                    <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=PasswordBox}}" CommandParameter="{Binding ElementName=PasswordBox}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </PasswordBox>
         <Button
   Style="{StaticResource MaterialDesignPaperLightButton}"
   ToolTip="Se connecter"
