--- a/C#app/CesiEats/UserManagement/ManageUser/ManageUserPage.xaml
+++ b/C#app/CesiEats/UserManagement/ManageUser/ManageUserPage.xaml
@@ -36,13 +36,12 @@
         <TextBox HorizontalAlignment="Left" Margin="542,100,0,0" TextWrapping="Wrap" Text="{Binding User.Phone}" VerticalAlignment="Top" Width="159" FontSize="14"/>
 
         <Label Content="Date de naissance :" HorizontalAlignment="Left" Margin="810,56,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft YaHei UI"/>
-        <TextBox HorizontalAlignment="Left" Margin="810,100,0,0" TextWrapping="Wrap" Text="{Binding User.Birthdate}" VerticalAlignment="Top" Width="171" FontSize="14"/>
 
         <Label Content="Addresse :" HorizontalAlignment="Left" Margin="70,231,0,0" VerticalAlignment="Top" FontFamily="Microsoft YaHei UI" FontSize="16"/>
         <TextBox HorizontalAlignment="Left" Margin="70,275,0,0" TextWrapping="Wrap" Text="{Binding User.Address}" VerticalAlignment="Top" Width="175" FontSize="14"/>
 
         <Label Content="Password :" HorizontalAlignment="Left" Margin="304,231,0,0" VerticalAlignment="Top" FontFamily="Microsoft YaHei UI" FontSize="16" Width="98"/>
-        <TextBox HorizontalAlignment="Left" Margin="304,275,0,0" TextWrapping="Wrap" Text="{Binding User.Password}" VerticalAlignment="Top" Width="148" FontSize="14"/>
+        <PasswordBox HorizontalAlignment="Left" Margin="304,275,0,0" x:Name="password" VerticalAlignment="Top" Width="148" FontSize="14" Cursor="Arrow"/>
 
         <Label Content="Role :" HorizontalAlignment="Left" Margin="542,231,0,0" VerticalAlignment="Top" FontFamily="Microsoft YaHei UI" FontSize="16"/>
 
@@ -66,5 +65,6 @@
             <ComboBoxItem
     Content="COMMERCIAL" />
         </ComboBox>
+        <DatePicker SelectedDate="{Binding User.Birthdate}" HorizontalAlignment="Left" Margin="810,103,0,0" VerticalAlignment="Top" Width="170"/>
     </Grid>
 </Page>
